# swmm_api

./: .gitignore  .gitlab-ci.yml  CHANGES.md  README.md  make.bat  make_pypi.sh  requirements.txt  setup.cfg  setup.py
docker_website/: Dockerfile  build.sh  push.sh  run.sh
examples/: adjust_subcatchemnt_pattern.inp  check_units_report.py  convert_table_to_swmm.py  cross_section_plot.ipynb  cross_section_plot.py  demo_catchment_adap.inp  example_GisToSWMM5.ipynb  example_GisToSWMM5.py  example_controls.inp  example_hydrograph.py  example_timeseries_classes.ipynb  gis_import.py  hotstart_file_reader.ipynb  hotstart_file_reader.py  inp_file_macros.ipynb  inp_file_macros.py  inp_file_reader.ipynb  inp_file_reader.py  inp_file_structure.ipynb  inp_file_writer.ipynb  out_file_reader.ipynb  out_file_reader.py  out_to_rpt.py  overview_all_examples.py  overview_sections_in_examples.py  plot_bokeh.py  plot_mpl.py  read_example_controls.py  report_example.py  report_file.ipynb  report_file.py  report_file_1.rpt  rpt_file_reader.ipynb  rpt_file_reader.py  small_steps.ipynb  speed_test.ipynb  speed_test.py  swmm_files_examples.py  t.py  temp_fail.py  (+2 more)
joss_paper/: paper.bib  paper.md
swmm_api/: __init__.py  __main__.py  _read_bin.py  dat_timeseries.py  hotstart.py  remove_curves.py  report.py  run.py  run_py.py
website/: CHANGES.md  README.md  api.rst  api_external_files.rst  api_inp.rst  api_inp_macros.inc  api_inp_macros_gis.inc  api_inp_reader.inc  api_inp_sections.inc  api_inp_sections.rst  api_inp_writer.inc  api_out.rst  api_rpt.rst  api_run.rst  base_functions.rst  (+4 more)
(+214 files in other folders)
