[metadata]
name = swmm-api
version = 0.1.alpha25

url = https://gitlab.com/markuspichler/swmm_api
project_urls =
    Documentation = https://markuspichler.gitlab.io/swmm_api
license = MIT
license_file = LICENSE
author = Markus Pichler
author_email = markus.pichler@tugraz.at
description = US-EPA-SWMM python interface
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English

keywords =
    swmm
    environment
    civil_engineering
    api

[options]
python_requires = >= 3.5
packages =
    swmm_api
    swmm_api.report_file
    swmm_api.output_file
    swmm_api.input_file
    swmm_api.input_file.inp_sections
    swmm_api.input_file.misc
    swmm_api.input_file.macro_snippets
install_requires =
    numpy
    pandas
    tqdm

[options.extras_require]
networkx = networkx
fastparquet = fastparquet
